# RustIngester

./: .dockerignore  .gitignore  COMPLETION_SUMMARY.md  Cargo.toml  DOCKER.md  DOCKER_DEPLOYMENT_SUCCESS.md  DOCKER_SUCCESS.md  Dockerfile  EMBEDDING_SETUP.md  FINAL_STATUS.md  GIT_COMMIT_GUIDE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_DOCKER.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_SERVICE.md  SETUP_DATABASE.md  TESTING_GUIDE.md  TEST_DOCUMENTATION.md  cleanup_old_files.sh  docker-compose.yml  docker-start.sh  docker-stop.sh  download-model.sh  run_tests.sh  test_docker_setup.sh
Data/: ok.json  ok_wrapped.json
docker/: Dockerfile.postgres  init-db.sql
migrations/: 001_messages_and_embeddings.sql
src/: config.rs  ingest.rs  lib.rs  main.rs  retrieve.rs  tests.rs
src/api/: context_handlers.rs  handlers.rs  ingest_handlers.rs  mod.rs  models.rs  routes.rs
src/db/: connect.rs  graph.rs  kg_ops.rs  message_ops.rs  mod.rs  models.rs  vector.rs
src/etl/: embed.rs  lsh.rs  mod.rs  parser.rs
