[package]
name = "rust_ingester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
anyhow = "1.0.100"
tokio = { version = "1.37.0", features = ["macros","rt-multi-thread"] }
tokio-postgres = {version = "0.7.15", features = ["with-chrono-0_4", "with-serde_json-1"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pgvector = {version = "0.3.1", features=["postgres"]}
ndarray = "0.15"
rand = "0.8"