[package]
name = "rust_ingester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
anyhow = "1.0.100"
tokio = { version = "1.37.0", features = ["macros","rt-multi-thread", "fs"] }
tokio-postgres = {version = "0.7.15", features = ["with-chrono-0_4", "with-serde_json-1"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pgvector = {version = "0.3.1", features=["postgres"]}
ndarray = "0.15"
rand = "0.8"
llama_cpp = { version = "0.3.2", default-features = false, features = ["metal"] }
reqwest = { version = "0.11", features = ["json"] }

# Web service dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[[bin]]
name = "service"
path = "src/bin/service.rs"

[[bin]]
name = "ingest_cli"
path = "src/bin/ingest_cli.rs"